[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Images/NucleoBandeirante/no_cenário.png" type="Texture" id=1]
[ext_resource path="res://scenes/AuxScenes/ChatBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/NucleoBandeirante/dialogs/Suazana.gd" type="Script" id=3]
[ext_resource path="res://assets/Images/NucleoBandeirante/1- Núcleo bandeirante.jpg" type="Texture" id=4]
[ext_resource path="res://assets/Images/ProfileImages/lupa_profile.png" type="Texture" id=5]
[ext_resource path="res://assets/Images/NucleoBandeirante/ícone_fala.png" type="Texture" id=6]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=8]
[ext_resource path="res://soundtrack/Loop4 Lavadeiras.mp3" type="AudioStream" id=9]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=13]

[node name="Suzana" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
color = Color( 0.631373, 0.607843, 0.607843, 1 )

[node name="SuzanaScenario" type="Sprite" parent="BackGround"]
position = Vector2( 409.676, 192.75 )
scale = Vector2( 1.32672, 1.32672 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 417, 424 )
scale = Vector2( 1.44272, 1.49196 )
texture = ExtResource( 1 )

[node name="ChatBox" parent="." instance=ExtResource( 2 )]
margin_left = -110.0
margin_top = 145.0
margin_right = -14.0
margin_bottom = 193.0
chat = "P*Mulher de deus, vi que a subprefeitura está toda destruída. O que aconteceu? Cê tava lá?*S*Tava sim! Foi um tumulto grande, uma multidão destruiu a subprefeitura, e eles gritavam “pão ou morte”! Tinha gente de todo canto, até de Planaltina.  Destruíram até o açougue e a escola primária.*P*Minha nossa! E por que tudo isso?*S*Os homens foram pra conversar com os funcionários da prefeitura, mas nada de serem atendidos, fazia dias que eles tentavam essa conversa.*P*E o que você acha desse tumulto todo?*S*Olha, eu não tiro a razão não, viu, tudo trabalhando de graça pra prefeitura fazia meses, vendo as crianças em casa passando fome, viraram até chacota entre as mulheres, a gente dizia que eles eram “a turma da boa vontade”, mangando deles… *P*Vixe! E essa movimentação toda já acabou?*S*Que nada, tá é começando de novo! Já me disseram que tem um bando de gente de terno chegando nas Rural Willys, e os homens tão tudo descendo, alvoroçados...*P*E você vai pra lá? *S*Eu vou lá espiar, quer ir comigo?*P*Isso, vamos sim!"
img = [ ExtResource( 5 ), ExtResource( 6 ) ]
cha = [ "P", "S" ]
image_scales = [ Vector2( 0.8, 0.8 ), Vector2( 0.68, 0.68 ) ]
nam = [ "Historiadora", "Dona Suzana" ]
resize_panel = [ Vector2( 113, 26 ), Vector2( 108, 26 ) ]

[node name="MainMusic" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 9 )

[node name="PlayerBackPack" parent="." instance=ExtResource( 13 )]

[connection signal="change_face1" from="ChatBox" to="." method="_on_ChatBox_change_face1"]
[connection signal="change_face2" from="ChatBox" to="." method="_on_ChatBox_change_face2"]
[connection signal="change_face3" from="ChatBox" to="." method="_on_ChatBox_change_face3"]
[connection signal="change_face4" from="ChatBox" to="." method="_on_ChatBox_change_face4"]
[connection signal="end_dialog" from="ChatBox" to="." method="end_suzana_scene"]
